[package]
name = "test4"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test4"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
#idl-build = ["anchor-lang/idl-build"]
# "anchor-spl/idl-build": 开启idl以获取spl token信息
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
#anchor-lang = "0.30.1"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
